--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "sadam",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "celebrate": "^15.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "joi": "^17.13.3",
     "mongoose": "^8.8.0"
